# uefivars

./: Cargo.toml  README.md  rustfmt.toml  uefivars.1
.github/workflows/: release.yml
src/: efi.rs  main.rs
