[package]
name = "uefivars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.8.4"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
lazy_static = "1.4.0"
rhexdump = "0.1.1"

